--- a/r-sparklyr-feedstock/recipe/meta.yaml
+++ b/r-sparklyr-feedstock/recipe/meta.yaml
@@ -1,6 +1,6 @@
-{% set version = '0.7.0' %}  # [linux or win32]
-{% set version = '0.7.0' %}  # [win64]
-{% set version = '0.7.0' %}  # [osx]
+{% set version = '0.8.4' %}  # [linux or win32]
+{% set version = '0.8.4' %}  # [win64]
+{% set version = '0.8.4' %}  # [osx]
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -10,16 +10,16 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-    url:  # [linux or win32]
+  url:  # [linux or win32]
     - {{ cran_mirror }}/src/contrib/sparklyr_{{ version }}.tar.gz  # [linux or win32]
     - {{ cran_mirror }}/src/contrib/Archive/sparklyr/sparklyr_{{ version }}.tar.gz  # [linux or win32]
-  sha256: 0825cfd4903acd4d89d2d4032f475e4a1c3cc595c6c2486b3302a9f3692fd653  # [linux or win32]
+  sha256: 7d43e7ec3abc29e2d5885c1a8f52bd3f41a18e69016690517f1e7362087abfbe  # [linux or win32]
 
-  url: https://cran.microsoft.com/snapshot/2018-04-23/bin/windows/contrib/3.5/sparklyr_0.7.0.zip  # [win64]
-  sha256: 05504727139aaa5ac65e46621aa7e35b309a0ae399aeaf79f9d595f6f623a31f  # [win64]
+  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/windows/contrib/3.5/sparklyr_0.8.4.zip  # [win64]
+  sha256: 0723790a3b6a9d0a8d0af9009133372997ee8c8bc702f0c919c6b3d9949683fc  # [win64]
 
-  url: https://cran.microsoft.com/snapshot/2018-04-23/bin/macosx/el-capitan/contrib/3.5/sparklyr_0.7.0.tgz  # [osx]
-  sha256: e41ab85c2b5dc8b66ce18789bc4ec348e8aa631f8ccadc4ab08fffdb2fb39388  # [osx]
+  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/macosx/el-capitan/contrib/3.5/sparklyr_0.8.4.tgz  # [osx]
+  sha256: 264f85d8a31f56ab176738130b4954d044b2529742c23abfbf64c3a337f2e2a2  # [osx]
 
 build:
   merge_build_host: True  # [win32]
@@ -31,7 +31,7 @@ build:
     - lib/R/lib/
     - lib/
 
-# Suggests: ggplot2, janeaustenr, nycflights13, testthat, RCurl
+# Suggests: ggplot2, glmnet, janeaustenr, Lahman, mlbench, nnet, nycflights13, RCurl, reshape2, testthat, tibble
 requirements:
   build:
     - {{posix}}zip               # [win32]
@@ -56,6 +56,7 @@ requirements:
     - r-rprojroot
     - r-rstudioapi
     - r-shiny >=1.0.1
+    - r-tidyr
     - r-withr
     - r-xml2
 
@@ -79,6 +80,7 @@ requirements:
     - r-rprojroot
     - r-rstudioapi
     - r-shiny >=1.0.1
+    - r-tidyr
     - r-withr
     - r-xml2
 
@@ -112,8 +114,8 @@ extra:
 # Package: sparklyr
 # Type: Package
 # Title: R Interface to Apache Spark
-# Version: 0.7.0
-# Authors@R: c( person("Javier", "Luraschi", email = "javier@rstudio.com", role = c("aut", "cre")), person("Kevin", "Kuo", role = "aut", email = "kevin.kuo@rstudio.com"), person("Kevin", "Ushey", role = "aut", email = "kevin@rstudio.com"), person("JJ", "Allaire", role = "aut", email = "jj@rstudio.com"), person(family = "RStudio", role = c("cph")), person(family = "The Apache Software Foundation", role = c("aut", "cph")) )
+# Version: 0.8.4
+# Authors@R: c( person("Javier", "Luraschi", email = "javier@rstudio.com", role = c("aut", "cre")), person("Kevin", "Kuo", role = "aut", email = "kevin.kuo@rstudio.com", comment = c(ORCID = "0000-0001-7803-7901")), person("Kevin", "Ushey", role = "aut", email = "kevin@rstudio.com"), person("JJ", "Allaire", role = "aut", email = "jj@rstudio.com"), person(family = "RStudio", role = c("cph")), person(family = "The Apache Software Foundation", role = c("aut", "cph")) )
 # Maintainer: Javier Luraschi <javier@rstudio.com>
 # Description: R interface to Apache Spark, a fast and general engine for big data processing, see <http://spark.apache.org>. This package supports connecting to local and remote Apache Spark clusters, provides a 'dplyr' compatible back-end, and provides an interface to Spark's built-in machine learning algorithms.
 # License: Apache License 2.0 | file LICENSE
@@ -123,13 +125,13 @@ extra:
 # LazyData: TRUE
 # RoxygenNote: 6.0.1.9000
 # Depends: R (>= 3.1.2)
-# Imports: assertthat, base64enc, broom, config (>= 0.2), DBI (>= 0.6-1), dplyr (>= 0.7.2), dbplyr (>= 1.1.0), digest, httr (>= 1.2.1), jsonlite (>= 1.4), lazyeval (>= 0.2.0), methods, openssl (>= 0.8), rappdirs, readr (>= 1.1.0), rlang (>= 0.1.4), rprojroot, rstudioapi, shiny (>= 1.0.1), withr, xml2
-# Suggests: ggplot2, janeaustenr, nycflights13, testthat, RCurl
+# Imports: assertthat, base64enc, broom, config (>= 0.2), DBI (>= 0.6-1), dplyr (>= 0.7.2), dbplyr (>= 1.1.0), digest, httr (>= 1.2.1), jsonlite (>= 1.4), lazyeval (>= 0.2.0), methods, openssl (>= 0.8), rappdirs, readr (>= 1.1.0), rlang (>= 0.1.4), rprojroot, rstudioapi, shiny (>= 1.0.1), withr, xml2, tidyr
+# Suggests: ggplot2, glmnet, janeaustenr, Lahman, mlbench, nnet, nycflights13, RCurl, reshape2, testthat, tibble
 # NeedsCompilation: no
-# Packaged: 2018-01-23 03:43:54 UTC; javierluraschi
-# Author: Javier Luraschi [aut, cre], Kevin Kuo [aut], Kevin Ushey [aut], JJ Allaire [aut], RStudio [cph], The Apache Software Foundation [aut, cph]
+# Packaged: 2018-05-25 20:36:06 UTC; javierluraschi
+# Author: Javier Luraschi [aut, cre], Kevin Kuo [aut] (<https://orcid.org/0000-0001-7803-7901>), Kevin Ushey [aut], JJ Allaire [aut], RStudio [cph], The Apache Software Foundation [aut, cph]
 # Repository: CRAN
-# Date/Publication: 2018-01-23 08:49:35 UTC
+# Date/Publication: 2018-05-25 21:39:49 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
