--- a/r-pcapp-feedstock/recipe/meta.yaml
+++ b/r-pcapp-feedstock/recipe/meta.yaml
@@ -27,6 +27,7 @@ requirements:
   build:
     - {{ compiler('c') }}        # [not win]
     - {{ compiler('cxx') }}      # [not win]
+    - {{ compiler('fortran') }}  # [linux]
     - rtools                     # [win]
     - {{posix}}zip               # [win]
 
