--- a/r-ape-feedstock/recipe/meta.yaml
+++ b/r-ape-feedstock/recipe/meta.yaml
@@ -36,6 +36,7 @@ requirements:
   build:
     - {{ compiler('c') }}        # [linux]
     - {{ compiler('cxx') }}      # [linux]
+    - {{ compiler('fortran') }}  # [linux]
     - rtools                     # [win32]
     - {{posix}}zip               # [win32]
 
