--- a/r-kernlab-feedstock/recipe/meta.yaml
+++ b/r-kernlab-feedstock/recipe/meta.yaml
@@ -35,6 +35,7 @@ requirements:
   build:
     - {{ compiler('c') }}        # [linux or osx]
     - {{ compiler('cxx') }}      # [linux or osx]
+    - {{ compiler('fortran') }}  # [linux]
     - rtools                     # [win32]
     - {{posix}}zip               # [win32]
 
