--- a/r-matrix-feedstock/recipe/meta.yaml
+++ b/r-matrix-feedstock/recipe/meta.yaml
@@ -27,7 +27,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}        # [not win]
-    - {{ compiler('fortran') }}  # [osx]
+    - {{ compiler('fortran') }}  # [linux or osx]
     - rtools                     # [win]
     - {{posix}}zip               # [win]
 
