--- a/r-rmysql-feedstock/recipe/meta.yaml
+++ b/r-rmysql-feedstock/recipe/meta.yaml
@@ -33,10 +33,12 @@ requirements:
   host:
     - mro-base
     - r-dbi >=0.4
+    - {{native}}mysql
 
   run:
     - mro-base
     - r-dbi >=0.4
+    - {{native}}mysql
 
 test:
   commands:
