--- a/r-xlsxjars-feedstock/recipe/meta.yaml
+++ b/r-xlsxjars-feedstock/recipe/meta.yaml
@@ -45,6 +45,8 @@ requirements:
     - r-rjava
 
 test:
+  requires:
+    - openjdk                    # [win]
   commands:
     # You can put additional test commands to be run here.
     - $R -e "library('xlsxjars')"           # [not win]
