--- a/r-essentials-mrclient-feedstock/recipe/meta.yaml
+++ b/r-essentials-mrclient-feedstock/recipe/meta.yaml
@@ -7,12 +7,12 @@ package:
 
 requirements:
   build:
-    - mro-base >={{version}}
+    - mro-base
     - r-mrclient >={{version}}
     - r-mrclient-mml >={{version}}
 
   run:
-    - mro-base >={{version}}
+    - mro-base
     - r-mrclient >={{version}}
     - r-mrclient-mml >={{version}}
 
